// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Typescript 3.7 detects errors 1`] = `
"30:2 - Type 'undefined[]' is not assignable to type '\\"auto\\" | \\"inherit\\" | (string & {}) | \\"-moz-initial\\" | \\"initial\\" | \\"revert\\" | \\"unset\\" | AspectRatio[] | undefined'.
  Type 'undefined[]' is not assignable to type 'AspectRatio[]'.
    Type 'undefined' is not assignable to type 'AspectRatio'."
`;

exports[`Typescript 3.7 detects errors 2`] = `
"47:2 - Type '{ unknownProperty: number; }' is not assignable to type 'Properties<0 | (string & {}), string & {}>'.
  Object literal may only specify known properties, and 'unknownProperty' does not exist in type 'Properties<0 | (string & {}), string & {}>'."
`;

exports[`Typescript 3.7 detects errors 3`] = `
"51:2 - Type 'number[]' is not assignable to type '0 | \\"auto\\" | \\"inherit\\" | (string & {}) | \\"-moz-initial\\" | \\"initial\\" | \\"revert\\" | \\"unset\\" | undefined'.
  Type 'number[]' is not assignable to type '\\"unset\\"'."
`;

exports[`Typescript 3.7 detects errors 4`] = `
"52:2 - Type 'number[]' is not assignable to type '\\"inherit\\" | (string & {}) | \\"-moz-initial\\" | \\"initial\\" | \\"revert\\" | \\"unset\\" | (number & {}) | undefined'.
  Type 'number[]' is not assignable to type '\\"unset\\"'."
`;

exports[`Typescript 3.7 detects errors 5`] = `
"57:6 - Type '{}' is not assignable to type 'string & {}'.
  Type '{}' is not assignable to type 'string'."
`;

exports[`Typescript 3.7 detects errors 6`] = `
"62:10 - Type 'Range' is not assignable to type '\\"auto\\"'.
  Type 'string & {}' is not assignable to type '\\"auto\\"'."
`;

exports[`Typescript 3.7 detects errors 7`] = `"69:6 - Type '1' is not assignable to type 'string | 0'."`;

exports[`Typescript 3.7 detects errors 8`] = `"81:23 - This condition will always return 'false' since the types 'string | 0 | (string | 0)[]' and '1' have no overlap."`;

exports[`Typescript 3.7 detects errors 9`] = `"95:25 - This condition will always return 'false' since the types 'string | 0' and '1' have no overlap."`;

exports[`Typescript 3.7 detects errors 10`] = `"105:14 - Argument of type '1' is not assignable to parameter of type 'string | 0 | (string | 0)[]'."`;

exports[`Typescript 3.7 detects errors 11`] = `
"106:14 - Argument of type '1[]' is not assignable to parameter of type 'string | 0 | (string | 0)[]'.
  Type '1[]' is not assignable to type '(string | 0)[]'.
    Type '1' is not assignable to type 'string | 0'."
`;

exports[`Typescript 3.7 detects errors 12`] = `"119:23 - This condition will always return 'false' since the types 'string | 0 | (string | 0)[]' and '1' have no overlap."`;

exports[`Typescript 3.7 detects errors 13`] = `"133:25 - This condition will always return 'false' since the types 'string | 0' and '1' have no overlap."`;

exports[`Typescript 3.7 detects errors 14`] = `"143:34 - Argument of type '1' is not assignable to parameter of type '0 | \\"auto\\" | \\"inherit\\" | (string & {}) | \\"-moz-initial\\" | \\"initial\\" | \\"revert\\" | \\"unset\\" | \\"-moz-fit-content\\" | \\"-moz-max-content\\" | \\"-moz-min-content\\" | \\"fit-content\\" | \\"max-content\\" | ... 5 more ... | [...]'."`;

exports[`Typescript 3.7 detects errors 15`] = `
"144:34 - Argument of type '[1]' is not assignable to parameter of type '0 | \\"auto\\" | \\"inherit\\" | (string & {}) | \\"-moz-initial\\" | \\"initial\\" | \\"revert\\" | \\"unset\\" | \\"-moz-fit-content\\" | \\"-moz-max-content\\" | \\"-moz-min-content\\" | \\"fit-content\\" | \\"max-content\\" | ... 5 more ... | [...]'.
  Type '[1]' is not assignable to type '[0 | \\"auto\\" | \\"inherit\\" | (string & {}) | \\"-moz-initial\\" | \\"initial\\" | \\"revert\\" | \\"unset\\" | \\"-moz-fit-content\\" | \\"-moz-max-content\\" | \\"-moz-min-content\\" | \\"fit-content\\" | \\"max-content\\" | ... 4 more ... | \\"min-intrinsic\\"]'.
    Type '1' is not assignable to type '0 | \\"auto\\" | \\"inherit\\" | (string & {}) | \\"-moz-initial\\" | \\"initial\\" | \\"revert\\" | \\"unset\\" | \\"-moz-fit-content\\" | \\"-moz-max-content\\" | \\"-moz-min-content\\" | \\"fit-content\\" | \\"max-content\\" | ... 4 more ... | \\"min-intrinsic\\"'."
`;

exports[`Typescript 3.7 detects errors 16`] = `"149:38 - Namespace '\\"index\\"' has no exported member 'DataType'."`;
